--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-devtools": "^5.87.4",
+    "axios": "^1.11.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "react-router-dom": "^7.8.2",
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
