--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "nodemon --watch src --exec ts-node src/app.ts"
+    "dev": "nodemon --watch src --exec ts-node src/app.ts",
+    "seed": "ts-node src/utils/seed.ts"
+
   },
   "keywords": [],
   "author": "",
