--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "build": "tsc",
     "dev": "nodemon --watch src --exec ts-node src/app.ts",
     "seed": "ts-node src/utils/seed.ts"
-
   },
   "keywords": [],
   "author": "",
@@ -18,7 +17,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.1",
+    "d": "^1.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
@@ -31,6 +32,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "zod": "^4.1.7"
   }
